--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ main {
 /* slider styles slider styles slider styles slider styles slider styles */
 
 .slideshow {
-    width: 100dvw;
+    width: 100vw;
     margin-left: -1rem;
     margin-block: 3rem;
     border-bottom: solid 4px var(--clr-yellow);
@@ -82,7 +82,7 @@ main {
 @media (orientation: landscape) {
     .slideshow {
         position: relative;
-        width: auto;
+        width: unset;
         margin-left: 0;
 
         .slideshow__caption {
@@ -92,12 +92,28 @@ main {
     }
 }
 
-.slideshow__slide {
+/* .test {
     width: 100%;
     aspect-ratio: 16 / 5;
-    background-image: url("../img/photo/ACME_Article-Picture.jpg");
-    background-size: 120%;
-    background-position: 85% 66%;
+} */
+
+.keen-slider {
+    /* width: 100%;
+    height: 100%; */
+    width: 100%;
+    aspect-ratio: 16 / 5;
+}
+
+.number-slide {
+  display: flex;
+}
+
+@media (orientation: landscape) {
+    /* .keen-slider {
+    } */
+
+    /* .slide {
+    } */
 }
 
 .slideshow__buttons {
